# PCData

./: .clang-format  .gitignore  CMakeLists.txt  README.md
PCData/: CMakeLists.txt  PCData.cpp  PCData.hpp
database/: ChemSep8.32.xml
demo/: CMakeLists.txt  demo.cpp
